--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "alpinejs": "^3.7.0",
     "html-minifier": "^4.0.0",
     "tailwindcss": "^3.0.0"
